RESOLVED FIXED157122
AX: superscript content exposed as plain text; VoiceOver does not speak or pause to make this understandable
https://bugs.webkit.org/show_bug.cgi?id=157122
Summary AX: superscript content exposed as plain text; VoiceOver does not speak or pa...
chris fleizach
Reported 2016-04-27 23:06:35 PDT
VO pronounces superscripts as "1", "2" without a pause and doesn't read them at all in chart titles whereas it should read "Superscript 1", "Superscript 2" etc: <rdar://problem/21231487>
Attachments
patch (4.51 KB, patch)
2016-04-28 00:05 PDT, chris fleizach
dbates: review+
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-yosemite (805.93 KB, application/zip)
2016-04-28 00:50 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (818.25 KB, application/zip)
2016-04-28 00:53 PDT, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-yosemite (1014.55 KB, application/zip)
2016-04-28 01:16 PDT, Build Bot
no flags
patch (8.06 KB, patch)
2016-04-28 10:58 PDT, chris fleizach
no flags
patch (8.13 KB, patch)
2016-04-28 11:27 PDT, chris fleizach
no flags
patch (8.13 KB, patch)
2016-04-28 15:05 PDT, chris fleizach
no flags
patch (8.04 KB, patch)
2016-04-28 16:05 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2016-04-28 00:05:30 PDT
Daniel Bates
Comment 2 2016-04-28 00:35:48 PDT
Comment on attachment 277598 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=277598&action=review r=me > Source/WebCore/ChangeLog:3 > + AX: superscript content exposed as plain text; V I updated the title of the Bugzilla bug to reflect the title of <rdar://problem/21231487>. Please update the bug title in this ChangeLog. > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=157122 Please add the radar URL, <rdar://problem/21231487>, below this line. One example of a ChangeLog entry that has a radar URL is <http://trac.webkit.org/changeset/200165>. > LayoutTests/ChangeLog:3 > + AX: superscript content exposed as plain text; V Please update the bug title in this ChangeLog. > LayoutTests/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=157122 Please add the radar URL, <rdar://problem/21231487>, below this line. One example of a ChangeLog entry that has a radar URL is <http://trac.webkit.org/changeset/200165>.
Daniel Bates
Comment 3 2016-04-28 00:38:45 PDT
The following tests have regressed on the Mac EWS: Regressions: Unexpected text-only failures (3) accessibility/mac/subroles-for-formatted-groups.html [ Failure ] accessibility/roles-computedRoleString.html [ Failure ] accessibility/roles-exposed.html [ Failure ] I suspect that we need to update their expected result. Please take care to update your patch before landing to fix these failures.
chris fleizach
Comment 4 2016-04-28 00:40:17 PDT
(In reply to comment #3) > The following tests have regressed on the Mac EWS: > > Regressions: Unexpected text-only failures (3) > accessibility/mac/subroles-for-formatted-groups.html [ Failure ] > accessibility/roles-computedRoleString.html [ Failure ] > accessibility/roles-exposed.html [ Failure ] > > I suspect that we need to update their expected result. Please take care to > update your patch before landing to fix these failures. Will do. Thanks for review
Build Bot
Comment 5 2016-04-28 00:49:57 PDT
Comment on attachment 277598 [details] patch Attachment 277598 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1233219 New failing tests: accessibility/roles-computedRoleString.html accessibility/roles-exposed.html accessibility/mac/subroles-for-formatted-groups.html
Build Bot
Comment 6 2016-04-28 00:50:00 PDT
Created attachment 277601 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-04-28 00:53:34 PDT
Comment on attachment 277598 [details] patch Attachment 277598 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1233222 New failing tests: accessibility/roles-computedRoleString.html accessibility/roles-exposed.html accessibility/mac/subroles-for-formatted-groups.html
Build Bot
Comment 8 2016-04-28 00:53:38 PDT
Created attachment 277602 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9 2016-04-28 01:16:35 PDT
Comment on attachment 277598 [details] patch Attachment 277598 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1233223 New failing tests: accessibility/roles-computedRoleString.html accessibility/roles-exposed.html accessibility/mac/subroles-for-formatted-groups.html
Build Bot
Comment 10 2016-04-28 01:16:39 PDT
Created attachment 277605 [details] Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
chris fleizach
Comment 11 2016-04-28 10:58:55 PDT
chris fleizach
Comment 12 2016-04-28 11:27:39 PDT
chris fleizach
Comment 13 2016-04-28 15:05:57 PDT
chris fleizach
Comment 14 2016-04-28 16:05:07 PDT
chris fleizach
Comment 15 2016-04-28 16:12:29 PDT
Note You need to log in before you can comment on or make changes to this bug.