AX: superscript content exposed as plain text; VoiceOver does not speak or pause to make this understandable https://bugs.webkit.org/show_bug.cgi?id=157122 <rdar://problem/21231487>

Reviewed by Daniel Bates.

Expose role types for subscript and superscript.

Modified: accessibility/mac/subroles-for-formatted-groups.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isStyleFormatGroup):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper subrole]):

LayoutTests:
AX: superscript content exposed as plain text; VoiceOver does not speak or pause to make this understandable
https://bugs.webkit.org/show_bug.cgi?id=157122
<rdar://problem/21231487>

Reviewed by Daniel Bates.

* accessibility/mac/subroles-for-formatted-groups-expected.txt:
* accessibility/mac/subroles-for-formatted-groups.html:
* platform/mac/accessibility/accessibility/roles-exposed-expected.txt:
* accessibility/roles-computedRoleString-expected.txt:



Canonical link: https://commits.webkit.org/175260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200214 268f45cc-cd09-0410-ab3c-d52691b4dbfc